Fix code overflow issue on INP article (#8665)
* Fix code overflow issue on INP article

* Better fix

* Change to overflow-wrap: break-word

--- a/src/scss/next.scss
+++ b/src/scss/next.scss
@@ -398,8 +398,9 @@ h6 code,
   word-break: break-all;
 }
 
-p code {
-  word-break: break-all;
+p code,
+li code {
+  overflow-wrap: break-word;
 }
 
 /// Sub and sup
